# tenclaw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: convert_icons.py  get-kernel.sh  make-initramfs.sh  make-rootfs.sh
src/: main.cpp  version.h.in
src/arch/x86_64/: acpi.cpp  acpi.h  boot.cpp  boot.h
src/common/: ports.h  vm_model.h
src/core/: CMakeLists.txt  README.md
src/core/arch/x86_64/: acpi.cpp  acpi.h  boot.cpp  boot.h
src/core/device/: device.h
src/core/device/acpi/: acpi_pm.cpp  acpi_pm.h
src/core/device/irq/: i8259_pic.h  ioapic.cpp  ioapic.h
src/core/device/pci/: pci_host.h
src/core/device/rtc/: cmos_rtc.cpp  cmos_rtc.h
src/core/device/serial/: uart_16550.cpp  uart_16550.h
src/core/device/timer/: i8254_pit.cpp  i8254_pit.h
src/core/device/virtio/: disk_image.cpp  disk_image.h  qcow2.cpp  qcow2.h  raw_image.cpp  raw_image.h  virtio_blk.cpp  virtio_blk.h  virtio_fs.cpp  virtio_fs.h  virtio_gpu.cpp  virtio_gpu.h  virtio_input.cpp  virtio_input.h  virtio_mmio.cpp  virtio_mmio.h  virtio_net.cpp  virtio_net.h  virtio_serial.cpp  virtio_serial.h  virtio_snd.cpp  virtqueue.cpp  virtqueue.h
src/core/guest_agent/: guest_agent_handler.cpp  guest_agent_handler.h
src/core/net/: lwipopts.h  net_backend.cpp  net_backend.h
src/core/net/arch/: bpstruct.h  cc.h
src/core/vmm/: address_space.cpp  address_space.h  types.h  vm.cpp  vm.h
src/device/: device.h
src/device/irq/: i8259_pic.h  ioapic.cpp  ioapic.h
src/device/pci/: pci_host.h
src/device/rtc/: cmos_rtc.cpp  cmos_rtc.h
src/device/serial/: uart_16550.cpp  uart_16550.h
src/device/timer/: i8254_pit.cpp  i8254_pit.h
src/hypervisor/: whvp_platform.cpp  whvp_platform.h  whvp_vcpu.cpp  whvp_vcpu.h  whvp_vm.cpp  whvp_vm.h
src/ipc/: CMakeLists.txt  protocol_v1.cpp  protocol_v1.h
src/manager/: CMakeLists.txt  app.manifest  app_settings.cpp  app_settings.h  main.cpp  manager_service.cpp  manager_service.h  resource.h  toolbar.rc
src/net/: net_backend.cpp  net_backend.h
src/platform/tray/windows/: CMakeLists.txt  tray_app.cpp  tray_app.h
src/platform/windows/audio/: wasapi_audio_player.cpp
src/platform/windows/console/: std_console_port.cpp  std_console_port.h
src/runtime/: CMakeLists.txt  main.cpp  runtime_service.cpp  runtime_service.h
src/ui/common/: i18n.cpp  i18n.h  vm_forms.cpp
src/ui/win32/: CMakeLists.txt  win32_dialogs.cpp  win32_dialogs.h  win32_display_panel.cpp  win32_display_panel.h  win32_ui_shell.cpp  win32_ui_shell.h
src/ui/win32/components/: console_tab.cpp  info_tab.cpp  vm_listbox.cpp  vm_listbox.h
src/vmm/: address_space.cpp  address_space.h  types.h  vm.cpp  vm.h
